Finish moving dropdown (#f-lone) implementation. (Not tested)

--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -282,7 +282,7 @@ span.gap {
     border: none;
 }
 
-.copy-form, .edit-form, .add-form {
+.copy-form, .add-form {
     padding: 15px;
     border-radius: 5px;
     font-size: 15px;
