--- a/app/views/collections/remove_game_search.js.erb
+++ b/app/views/collections/remove_game_search.js.erb
@@ -11,39 +11,30 @@ var x_id = '<%= @x_id %>';
 var uniq_results = x_id === game_id;
 var view = $('#view-container').attr('view');
 
-if (view == 'list') {
-    var $form = $("#t-ops");
-} else {
-    var $form = $("#add-form-" + x_id);
-}
+var $form = view === 'list' ?  $("#t-ops") : $("#f-lone");
 
 $form.find(".already-in").html("<%= j(render partial: 'search/already_in', locals: { game_name: @game.name, igdb_id: @game.igdb_id, x_id: @x_id }) %>");
 $form.find(".add-form-errors").html('');
 
 if (remove_underline) {
-
     if (view === 'covers') {
-
         if (uniq_results) {
             var name_el = $('#gs-' + game_id).find('.game-name span');
         } else {
             var name_el = $('[id^=gs-' + game_id + '-]').find('.game-name span');
         }
-
         name_el.removeClass('owned');
-    } else {
-
-        if (uniq_results) {
-            var add_links = $('#add-' + game_id)
-        } else {
-            var add_links = $('[id^=add-' + game_id + '-]')
-        }
-
-        add_links.each(function() {
-            var href = $(this).attr('href');
-            $(this).attr('href', href.replace('true', 'false'));
-            $(this).attr('uk-icon', 'plus');
-        });
-
     }
+
+    if (uniq_results) {
+        var add_links = $('#add-' + game_id)
+    } else {
+        var add_links = $('[id^=add-' + game_id + '-]')
+    }
+
+    add_links.each(function() {
+        var href = $(this).attr('href');
+        $(this).attr('href', href.replace('true', 'false'));
+        $(this).attr('uk-icon', 'plus');
+    });
 }
