--- a/app/views/my_games/_panels.html.erb
+++ b/app/views/my_games/_panels.html.erb
@@ -36,16 +36,20 @@
         <ul >
             <li>
                 <% if needs_platform %>
-                <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-edit-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'pencil', 'uk-tooltip' => "title: Edit; pos: right") %>
+                <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view),
+                 class: 'my_dd uk-icon-link', remote: true, 'uk-icon': 'pencil',
+                  'data-mother' => "#g-menu-#{ id }", 'uk-tooltip' => "title: Edit; pos: right") %>
                 <% else %>
                 <%= content_tag(:a, '', class: 'uk-icon-link cf-disabled', 'uk-icon': 'pencil') %>
                 <% end %>
             </li>
             <li>
-                <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-copy-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'copy', 'uk-tooltip' => "title: Copy / Move; pos: right") %>
+                <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view),
+                 class: 'my_dd uk-icon-link', remote: true, 'uk-icon': 'copy',
+                  'data-mother' => "#g-menu-#{ id }", 'uk-tooltip' => "title: Copy / Move; pos: right") %>
             </li>
             <li>
-                <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), id: "g-delete-#{ id }", class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-tooltip': 'title: Delete; pos: right') %>
+                <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-tooltip': 'title: Delete; pos: right') %>
             </li>
         </ul>
         <%= content_tag :div,nil, class: "g-menu-shadow #{ extra }" %>
@@ -94,15 +98,11 @@
 <button id="g-hide-<%= id %>" class="g-hide uk-icon-link" uk-icon="chevron-up"></button>
 <% end %>
 <% end %>
+<% end %>
 <% unless shared %>
-<%= content_tag :div, id: "copy-form-#{ id }", class: 'copy-form', 'uk-dropdown': "toggle: #g-copy-#{ id }; mode: click; delay-hide: 100; boundary: #g-menu-#{ id }; boundary-align: true; pos: right-top"  do %>
+<%= content_tag :div, id: 'f-lone', class: 'copy-form wf',
+'uk-dropdown': "toggle: #z; mode: click; delay-hide: 100; boundary-align: true; pos: right-top" do %>
 <span class="loading">Loading</span>
-<% end %>
-<% if needs_platform %>
-<%= content_tag :div, id: "edit-form-#{ id }", class: 'edit-form', 'uk-dropdown': "toggle: #g-edit-#{ id }; mode: click; delay-hide: 100; boundary: #g-menu-#{ id }; boundary-align: true; pos: right-top" do %>
-<span class="loading">Loading</span>
-<% end %>
-<% end %>
 <% end %>
 <% end %>
 <div class="uk-width-5-6 page-links bottom">
