--- a/app/views/search/_cover_view.html.erb
+++ b/app/views/search/_cover_view.html.erb
@@ -28,7 +28,8 @@
         <% xtr = owned ? ' owned' : '' %>
         <%= content_tag(:span, game[:name], class: 'name' + xtr) %>
         <% icon = owned ? 'check' : 'plus' %>
-        <%= link_to '', new_game_url(x_id: x_id, owned: owned), class: 'plus', id: "add-#{ x_id }", remote: true, 'uk-icon': icon %>
+        <%= link_to '', new_game_url(x_id: x_id, owned: owned),id: "add-#{ x_id }",
+         class: 'my_dd plus', 'data-mother' => "#gs-#{ x_id }",remote: true, 'uk-icon': icon %>
       </p>
       <div class="fade">
         <p class="game-warning">
@@ -73,9 +74,6 @@
           <% end %>
         <% end %>
       </div>
-      <%= content_tag(:div, id: "add-form-#{ x_id }", class: 'add-form wf', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #gs-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") do %>
-        <span class="loading">Loading</span>
-      <% end %>
       <% end %>
       <% end %>
 </div>
@@ -84,3 +82,6 @@
       <span class="loading">Loading</span>
   </div>
 </div>
+<%= content_tag(:div, id: "f-lone", class: 'add-form wf', 'uk-dropdown': "toggle: #z; mode: click; boundary-align: true;  delay-hide: 100;  pos: right-top") do %>
+  <span class="loading">Loading</span>
+<% end %>
