--- a/app/views/collections/remove_game_search.js.erb
+++ b/app/views/collections/remove_game_search.js.erb
@@ -7,8 +7,7 @@ UIkit.notification({
 
 var remove_underline = <%= @remove_underline %>;
 var game_id = '<%= @game.igdb_id %>';
-var x_id = '<%= @x_id %>';
-var uniq_results = x_id === game_id;
+var uniq_results = '<%= @x_id %>' === game_id;
 var view = $('#view-container').attr('view');
 
 var $form = view === 'list' ?  $("#t-ops") : $("#f-lone");
