--- a/app/views/games/panel_show.js.erb
+++ b/app/views/games/panel_show.js.erb
@@ -2,7 +2,8 @@ var id = '<%= @g_id %>';
 var $drop = $('#g-drop-' + id);
 $drop.html("<%= j(render partial: 'shared/panel_show', locals: { game: @game, g_id: @g_id }) %>")
      .removeClass('empty')
-     .slideDown('fast');
+     .show();
+     // .slideDown('fast');
 
 var $hidee = $('#g-hide-' + id);
 $hidee.show();
