--- a/app/views/games/copy_move.js.erb
+++ b/app/views/games/copy_move.js.erb
@@ -18,10 +18,7 @@ if (msg) {
 
     if (wi_same_coll || !copy) {
 
-        var data = {
-            type: 'refresh',
-            view: view
-        };
+        var data = { view: view };
 
         data = addRqRsToData(data);
 
