--- a/app/views/collections/_search.js.erb
+++ b/app/views/collections/_search.js.erb
@@ -2,7 +2,7 @@ var view = '<%= @view %>';
 
 cleanOffcanvas();
 
-$(".my-games").html('<%= j(render partial: "my_games/#{ @view }", locals: { collection: @collection, shared: shared }) %>');
+$("#my-games").html('<%= j(render partial: "my_games/#{ @view }", locals: { collection: @collection, shared: shared }) %>');
 
 $('#gsview').attr('value', view);
 $('#r-q').text(<%= raw query %>);
@@ -19,10 +19,8 @@ switch (view) {
         break;
     case 'panels':
         activateDropdowns();
-
         var r_ids = <%= raw @reopen %>;
         activatePreHidee(r_ids);
-
         closeAllPanels();
         moreInfo();
         break;
