Fix reset button (does not work with ajax panels).

--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -29,7 +29,7 @@
     <% end %>
 </div>
 <% end %>
-<%= content_tag(:button,'', id: 'search-reset', 'uk-close': '')%>
+<%= content_tag(:button,'', id: 'search-reset', type: 'button', 'uk-close' => '')%>
 <% end %>
 <% end %>
 <div id='r-q'>,,on</div>
