--- a/app/views/search/_panel_view.html.erb
+++ b/app/views/search/_panel_view.html.erb
@@ -3,11 +3,11 @@
     <% igdb_id = game[:igdb_id] %>
     <% x_id = game[:uniq] ? igdb_id.to_s + '-' + game[:uniq] : igdb_id %>
     <%= content_tag :div, id: "g-#{ x_id }", class: 'g-panel uk-width-5-6' do %>
-
     <div class="not-drop">
         <%= get_game_thumb(game) %>
         <%= content_tag :div, class: 'g-info s-mod' do %>
-        <%= content_tag(:div, nil, class: 'g-click s-mod', 'gameid': x_id) %>
+        <%= content_tag(:div, nil, class: 'g-click s-mod',
+         'gameid': x_id, 'igdb_id' => igdb_id) %>
                 <h4 class="g-title"><%= game[:name] %>
                 <% if (status_id = game[:status]) && status_id != 0 %>
                     <%= content_tag :span, "/ #{ convert_status(status_id) }", class: 'gw-b' %>
@@ -30,40 +30,8 @@
            class: "my_dd", 'data-mother' => "#gr-#{ x_id }", remote: true, 'uk-icon': add.first %>
         <% end %>
         </div>
-        <%= content_tag :div, id: "g-drop-#{ x_id }", class: 'g-drop s-mod' do %>
-        <div class="g-extra">
-            <% if screens = game[:screenshots] %>
-                <% urls = screens_urls(screens) %>
-                <div class="uk-position-relative pd-slide" uk-slideshow="animation: fade" uk-lightbox="toggle: .full-scrn; animation: fade">
-                    <%= content_tag :div, svg('loading'), class: 'g-spin' %>
-                    <ul class="uk-slideshow-items pd-slide-items">
-                        <% urls.each do |url| %>
-                        <li>
-                            <%= image_tag('', 'data-src' => url[:small], alt: '', 'uk-cover': '', 'uk-img': '') %>
-                            <%= content_tag(:a, '', href: url[:big], class: 'full-scrn') %>
-                            <div class="shadow"></div>
-                        </li>
-                        <% end %>
-                    </ul>
-                    <a class="pd-arr left" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-                    <a class="pd-arr right" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-                </div>
-            <% end %>
-            <% if summary = get_summary(game, 280, 50) %>
-                <p class="g-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= x_id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="shortSummary('<%= x_id %>')" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= x_id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary('<%= x_id %>')" uk-icon="icon: triangle-up"></button></span>
-            </p>
-            <% end %>
-            <% end %>
-            <% if platforms = game[:platforms_names] %>
-                <%= content_tag :p, "Platforms: #{ platforms.join(', ') }", class: 'g-platforms' %>
-            <% end %>
-            <div class="g-links">
-                <%= link_to '',"http://www.google.com/search?q=%22#{ game[:name].gsub(' ', '+') }%22+video+game" , class: "ex-link g-google uk-icon-button uk-margin-small-right", target: "_blank", "uk-icon" => "google" %>
-                <%= link_to svg('metacritic_icon'),"https://www.metacritic.com/search/game/#{ game[:name].gsub(' ', '%20') }/results" , class: "ex-link g-metacritic uk-icon-button uk-margin-small-right", target: "_blank" %>
-            </div>
-        </div>
+        <%= content_tag :div, id: "g-drop-#{ x_id }", class: 'g-drop empty' do %>
         <% end %>
-        <%= content_tag :button, '', id: "g-hide-#{ x_id }", class: 'g-hide uk-icon-link', 'uk-icon': 'chevron-up' %>
     <% end %>
 <% end %>
 </div>
