Fix search bar reset button.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -935,6 +935,7 @@ li.active:hover .opts {
     color: #777;
     padding: 0px 5px 0px 0px;
     height: 35px;
+    text-transform: capitalize;
 }
 
 .reset-button:focus {
