--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -63,8 +63,8 @@
       </div>
     </div>
     <div class="drop-buttons">
-      <%= f.button('Search', id: 'search', class: 'uk-button uk-button-default search-button', data: { disable_with: "<div uk-spinner=\"ratio: 0.5\"></div>" } )%>
-      <%= f.submit('Reset', class: "uk-button uk-button-default reset-button", type: "reset" )%>
+      <%= f.button('Search', id: 'search', class: 'uk-button search-button', data: { disable_with: "<div uk-spinner=\"ratio: 0.5\"></div>" } )%>
+      <%= f.submit('Reset', id: 'src-reset', class: "uk-button reset-button", type: "reset" )%>
     </div>
   </div>
   <div id="bar-history">
