--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -75,7 +75,7 @@
 <%= render 'collections/collections_order' %>
 
 <div class="strike part"><span>Export:</span></div>
-<p class="discription">Export your games library to Office Open XML Spreadsheet. There are two ways to export games from StillHaveThem.</p>
+<p class="discription">Export your games library to Office Open XML Spreadsheet. There are two options for export, depending on how you want games to be organized inside a spreadsheet.</p>
 
 <div class="uk-grid-small export-btns" uk-grid>
   <div>
