Change link for UI overview video.

--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -36,9 +36,9 @@
 
   <div>
     <div uk-lightbox>
-        <a class="uk-button lp-button lp-play lp-big" href="https://www.youtube-nocookie.com/watch?v=MdUQMrKQ5IY">
+        <a class="uk-button lp-button lp-play lp-big" href="https://www.youtube-nocookie.com/watch?v=7m3zqULVAsA">
         <span><%= svg 'play' %></span>
-        Watch app overview
+        Watch UI overview
         </a>
     </div>
   </div>
