Fix problem with disappearing add form dropdown after loading more results.

--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -11,11 +11,11 @@ switch (view) {
     case 'cover_view':
         cleanOffcanvas()
         fitNameInNoCover();
-        activateDropdowns();
+        activateDropdowns($show_more);
         morePlatforms();
         break;
     case 'panel_view':
-        activateDropdowns();
+        activateDropdowns($show_more);
         moreInfo();
         $('.g-drop').slideUp(0);
         break;
