Fix problem with messed up copy/move form when zoomed out.

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -124,6 +124,10 @@
         min-width: 270px;
         border-radius: 5px;
     }
+
+    .cm-inputs {
+        width: 80px;
+    }
 }
 
 a.t-trigger {
