Clean up off-canvas in show/search action (collections controller).

--- a/app/views/my_games/_covers.html.erb
+++ b/app/views/my_games/_covers.html.erb
@@ -92,7 +92,7 @@
     <%= js_will_paginate @games, container: false %>
   </div>
 </div>
-<div id="i-lone" uk-offcanvas="mode: none; bg-close: true">
+<div id="i-lone" uk-offcanvas="mode: none; bg-close: true; container: #my-games">
   <div class="uk-offcanvas-bar">
     <span class="loading">Loading</span>
   </div>
