--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -9,7 +9,7 @@ switch (view) {
     case 'list_view':
         break;
     case 'cover_view':
-        cleanOffcanvas()
+        cleanOffcanvas();
         fitNameInNoCover();
         activateDropdowns($show_more);
         morePlatforms();
