--- a/app/views/search/_cover_view.html.erb
+++ b/app/views/search/_cover_view.html.erb
@@ -77,7 +77,7 @@
       <% end %>
       <% end %>
 </div>
-<div id="i-lone" uk-offcanvas="mode: none; bg-close: true">
+<div id="i-lone" uk-offcanvas="mode: none; bg-close: true; container: #search-results">
   <div class="uk-offcanvas-bar">
       <span class="loading">Loading</span>
   </div>
