Fix problem with multiple modals/dropdowns/offcanvas when using load_more.

--- a/app/views/search/_cover_view.html.erb
+++ b/app/views/search/_cover_view.html.erb
@@ -77,6 +77,7 @@
       <% end %>
       <% end %>
 </div>
+<% unless load_more %>
 <div id="i-lone" uk-offcanvas="mode: none; bg-close: true; container: #search-results">
   <div class="uk-offcanvas-bar">
       <span class="loading">Loading</span>
@@ -84,4 +85,5 @@
 </div>
 <%= content_tag(:div, id: "f-lone", class: 'add-form wf', 'uk-dropdown': "toggle: #z; mode: click; boundary-align: true;  delay-hide: 100;  pos: right-top") do %>
   <span class="loading">Loading</span>
+<% end %>
 <% end %>
