--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -2,7 +2,7 @@ var view = '<%= view %>';
 
 var $show_more = $('#show-more');
 
-$show_more.html("<%= j(render :partial => 'results', :locals => { view: view }) %>");
+$show_more.html("<%= j(render :partial => 'results', :locals => { view: view, load_more: true }) %>");
 $show_more.attr('id', 'showed_more');
 
 switch (view) {
