--- a/app/views/search/_list_view.html.erb
+++ b/app/views/search/_list_view.html.erb
@@ -47,6 +47,7 @@
 <% end %>
 <% end %>
 
+<% unless load_more %>
 <div id="t-game-show" uk-modal="container: #search-results">
     <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical" uk-overflow-auto>
         <button class="uk-modal-close-default" type="button" uk-close></button>
@@ -63,3 +64,4 @@
         </div>
     </div>
 </div>
+<% end %>
