--- a/app/views/search/_panel_view.html.erb
+++ b/app/views/search/_panel_view.html.erb
@@ -35,6 +35,9 @@
     <% end %>
 <% end %>
 </div>
+
+<% unless load_more %>
 <%= content_tag(:div, id: "f-lone", class: 'add-form wf', 'uk-dropdown': "toggle: #z; mode: click; boundary-align: true;  delay-hide: 100;  pos: right-top") do %>
   <span class="loading">Loading</span>
+<% end %>
 <% end %>
