--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -9,7 +9,7 @@ clearSearchWait();
     var view = '<%= view %>';
     var $results = $("#search-results");
 
-    $results.html("<%= j(render partial:'results', locals: { view: view }) %>");
+    $results.html("<%= j(render partial: 'results', locals: { view: view, load_more: false }) %>");
     $results.append("<%= j(content_tag :span, @inquiry.last_form.values.join(','), id: 'last-form') %>");
     $("#bar-history").html("<%= j(render partial:'records/bar_records') %>");
     activateSearchRecords();
