--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -1313,7 +1313,7 @@ g#icon-61-warning {
 }
 
 .warning-icon, .search-warning-icon {
-    background: url("dark_warning.svg");
+    background: url("https://still-have-them.s3.eu-central-1.amazonaws.com/dark_warning.svg");
 }
 
 // Shadows
